# PetriNet

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  build_exe.ps1  build_portable_exe.ps1  patch_markov.py  publish.py  publish_release.ps1  saved_from_app.gpn  temp_excerpt.txt  temp_insert14.py  temp_insert5.py  temp_prev.txt  tmp_print.py  Сеть 3.gpn  модель.gpn2  пример.csv
.github/workflows/: release.yml
docs/: copy.md  gpn_format.md  markov_validation_plan.md  promt.md  structure.md  task_plan_2026-03-08.md  task_plan_2026-03-10.md  task_plan_2026-03-13.md  work.md  баги.md
fixtures/legacy/: Сеть 1.gpn
scripts/: generate_copy.py  publish.py  publish_version.ps1
src/: lib.rs  main.rs  markov.rs  model.rs
src/formats/: atf.rs  mod.rs
src/io/: gpn2.rs  legacy_gpn.rs  mod.rs
src/sim/: engine.rs
src/ui/: app.rs  mod.rs  property_selection.rs  property_window.rs  scroll_utils.rs
src/ui/app/: graph_view.rs  shortcuts.rs  table_view.rs  tool_palette.rs
src/ui/app/petri_app/: arc_place_transition_pair.rs  arc_topology_fingerprint.rs  assign_auto_name_for_place.rs  cleanup_legacy_sidecar.rs  collect_selected_arc_ids.rs  collect_selected_frame_ids.rs  collect_selected_text_ids.rs  draw_arc_properties.rs  draw_arc_props_window.rs  draw_help_controls.rs  draw_layout.rs  draw_netstar_export_validation.rs  draw_place_props_window.rs  draw_text_properties.rs  duplicate_ids.rs  extract_legacy_export_hints.rs  format_marking.rs  frame_at.rs  mod.rs  (+26 more)
tests/: encoding_guard.rs  export_runtime_probe.rs  gpn2_probe.rs  legacy_import.rs  ui_tests.rs
(+88 files in other folders)
