[package]
name = "petri_net_legacy_editor"
version = "0.4.27"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
rand = { version = "0.8", features = ["small_rng"] }
arboard = "3.6"

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
