[package]
name = "petri_net_legacy_editor"
version = "0.7.16"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
arboard = "3.6"
image = { version = "0.25", default-features = false, features = ["ico"] }
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1









